--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "@mysten/sui": "^1.24.0",
     "@types/ssh2": "^1.15.4",
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
