--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@v1xingyue/mcp-template",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "main": "dist/mcp.js",
   "bin": {
     "custom-mcp": "./dist/mcp.js"
@@ -35,6 +35,7 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "ssh2": "^1.16.0",
+    "telegraf": "^4.16.3",
     "undici": "^7.5.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
