--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@v1xingyue/mcp-template",
-  "version": "1.0.36",
+  "version": "1.0.38",
   "main": "dist/mcp.js",
   "bin": {
     "custom-mcp": "./dist/mcp.js"
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/coingecko-api": "^1.0.13",
     "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.10",
@@ -29,6 +30,8 @@
     "@modelcontextprotocol/sdk": "^1.7.0",
     "@mysten/sui": "^1.24.0",
     "@types/ssh2": "^1.15.4",
+    "coingecko-api": "^1.0.10",
+    "coingecko-api-v3": "^0.0.29",
     "commander": "^13.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
