--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "prebuild": "echo \"export const BUILD_TIME = '$(date '+%Y-%m-%d %H:%M:%S')';\" > src/build-info.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev src/mcp.ts sse",
-    "prepublish": "npm version patch && npm run build",
-    "publish": "npm publish --access public",
-    "prepublish-dev": "npm version patch && npm run build",
-    "publish-dev": "npm publish --access public --tag dev"
+    "dev": "ts-node-dev src/mcp.ts sse"
   },
   "keywords": [],
   "author": "",
